--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 text-transform: uppercase;
                 margin-top: 35px;
                 cursor: pointer;">
-                  Register items
+                  Report Behaviour
                 </a></div>
               </div>
             </div>
