--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
 
   <link rel="shortcut icon" href="New HAIBO logo icon.svg" type="image/x-icon">
-  <link rel="icon" href="New HAIBO logo icon.svg" type="image/x-icon">
+  <link rel="icon" href="favicon.png" type="image/x-icon">
 
   <title>
    Verify People easily wilth us | Back and White List 
