--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <script>
                   // Define the list of todo items
                   const todoList = [
-                    { parent: 'Siyabonga Ndaba', children: ['Software Dev', 'DELL i7 369-5417'] , avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
+                    { parent: 'Siyabonga Ndaba', children: ['Marketing Exc', 'W0338311'] , avatarURL: 'https://web.facebook.com/photo/?fbid=231422036154583&set=a.148072894489498' },
                     { parent: 'Twakae Fitness club-GYm', children: ['Gym', '083 976 5015'],avatarURL: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPclkY0uXCizZBABCvzani2DXB-uoCrfJD_B8J9zbfWA&s' },
                     { parent: 'Make a logo', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
                     { parent: 'Chat online', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
@@ -332,18 +332,18 @@
               </div>
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <input type="email" class="form-control" id="inputEmail4" placeholder="Product Name">
+                  <input type="email" class="form-control" id="inputEmail4" placeholder="Witness 2">
                 </div>
                 <div class="form-group col-md-6">
-                  <input type="email" class="form-control" id="inputEmail4" placeholder="Bought From/store">
+                  <input type="email" class="form-control" id="inputEmail4" placeholder="Witness 1">
                 </div>
               </div>
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <input type="email" class="form-control" id="inputEmail4" placeholder="Store/Seller Name">
+                  <input type="email" class="form-control" id="inputEmail4" placeholder="School/Work Address">
                 </div>
                 <div class="form-group col-md-6">
-                  <input type="email" class="form-control" id="inputEmail4" placeholder="Store/Seller Address">
+                  <input type="email" class="form-control" id="inputEmail4" placeholder="Work Address">
                 </div>
               </div>
               <div class="d-flex justify-content-center">
