--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <script>
                   // Define the list of todo items
                   const todoList = [
-                    { parent: 'Siyabonga Ndaba', children: ['Marketing Exc', 'W0338311'] , avatarURL: 'https://web.facebook.com/photo/?fbid=231422036154583&set=a.148072894489498' },
+                    { parent: 'Siyabonga Ndaba', children: ['Marketing Exc', 'W0338311','COMPLAINTS(4)','COMENDATIONS(2)','STATUS: Gray'] , avatarURL: 'https://web.facebook.com/photo/?fbid=231422036154583&set=a.148072894489498' },
                     { parent: 'Twakae Fitness club-GYm', children: ['Gym', '083 976 5015'],avatarURL: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPclkY0uXCizZBABCvzani2DXB-uoCrfJD_B8J9zbfWA&s' },
                     { parent: 'Make a logo', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
                     { parent: 'Chat online', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
