--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                   // Define the list of todo items
                   const todoList = [
                     { parent: 'Siyabonga Ndaba', children: ['Marketing Exc', 'W0338311','COMPLAINTS(4)','COMENDATIONS(2)','STATUS: Gray'] , avatarURL: 'https://web.facebook.com/photo/?fbid=231422036154583&set=a.148072894489498' },
-                    { parent: 'Boniswa Mngomezulu', children: ['Fashion Designer', '083 976 5015', 'W0338311','COMPLAINTS(4)','COMENDATIONS(219)','STATUS: White'],avatarURL: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUyQuiQw9U1nmRAMctkwAWN5Cf_jAntu_8fk06h-FmmA&s' },
+                    { parent: 'Boniswa Mngomezulu', children: ['Fashion Designer', 'W0338311','COMENDATIONS(219)','COMPLAINTS(0)','STATUS: White'],avatarURL: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUyQuiQw9U1nmRAMctkwAWN5Cf_jAntu_8fk06h-FmmA&s' },
                     { parent: 'Make a logo', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
                     { parent: 'Chat online', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
                     { parent: 'Meet mom', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' }
