--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <script>
                   // Define the list of todo items
                   const todoList = [
-                    { parent: 'Siyabonga Ndaba', children: ['Marketing Exc', 'W0338311','COMPLAINTS(4)','COMENDATIONS(2)','STATUS: Gray'] , avatarURL: 'https://web.facebook.com/photo/?fbid=231422036154583&set=a.148072894489498' },
+                    { parent: 'Siyabonga Ndaba', children: ['Marketing Exc', 'W0338311','COMENDATIONS(111)','COMPLAINTS(4)','STATUS: Gray'] , avatarURL: 'https://scontent.fjnb1-1.fna.fbcdn.net/v/t39.30808-6/345442685_3590542494508804_811087326214541940_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeH_l7STBCUoHe4FzpBoeQsQF5PqALyd6dIXk-oAvJ3p0o4WlAubDdE5KPebVVoTOxjwBBqUxHwJDq5Bu9tpTeAk&_nc_ohc=iPKN6hepejQAb75DaY0&_nc_zt=23&_nc_ht=scontent.fjnb1-1.fna&oh=00_AfAvIbagg9mAKYR73weuos1rNW2QIfcFPVyP4rXrhqfX2w&oe=661C6F73' },
                     { parent: 'Boniswa Mngomezulu', children: ['Fashion Designer', 'W0338311','COMENDATIONS(219)','COMPLAINTS(0)','STATUS: White'],avatarURL: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUyQuiQw9U1nmRAMctkwAWN5Cf_jAntu_8fk06h-FmmA&s' },
                     { parent: 'Make a logo', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
                     { parent: 'Chat online', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
