--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <script>
                   // Define the list of todo items
                   const todoList = [
-                    { parent: 'Siyabonga Ndaba', children: ['Marketing Exc', 'W0338311','COMENDATIONS(111)','COMPLAINTS(4)','STATUS: Gray'] , avatarURL: 'https://scontent.fjnb1-1.fna.fbcdn.net/v/t39.30808-6/345442685_3590542494508804_811087326214541940_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeH_l7STBCUoHe4FzpBoeQsQF5PqALyd6dIXk-oAvJ3p0o4WlAubDdE5KPebVVoTOxjwBBqUxHwJDq5Bu9tpTeAk&_nc_ohc=iPKN6hepejQAb75DaY0&_nc_zt=23&_nc_ht=scontent.fjnb1-1.fna&oh=00_AfAvIbagg9mAKYR73weuos1rNW2QIfcFPVyP4rXrhqfX2w&oe=661C6F73' },
+                    { parent: 'Siyabonga Ndaba', children: ['Marketing Exc', 'W0338311','COMENDATIONS(111)','COMPLAINTS(4)','STATUS: White'] , avatarURL: 'https://scontent.fjnb1-1.fna.fbcdn.net/v/t39.30808-6/345442685_3590542494508804_811087326214541940_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeH_l7STBCUoHe4FzpBoeQsQF5PqALyd6dIXk-oAvJ3p0o4WlAubDdE5KPebVVoTOxjwBBqUxHwJDq5Bu9tpTeAk&_nc_ohc=iPKN6hepejQAb75DaY0&_nc_zt=23&_nc_ht=scontent.fjnb1-1.fna&oh=00_AfAvIbagg9mAKYR73weuos1rNW2QIfcFPVyP4rXrhqfX2w&oe=661C6F73' },
                     { parent: 'Boniswa Mngomezulu', children: ['Fashion Designer', 'W0338311','COMENDATIONS(219)','COMPLAINTS(0)','STATUS: White'],avatarURL: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUyQuiQw9U1nmRAMctkwAWN5Cf_jAntu_8fk06h-FmmA&s' },
                     { parent: 'Make a logo', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
                     { parent: 'Chat online', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
@@ -285,8 +285,18 @@
       <img src="images/book-car.png" alt="">
     </div>
   </section>
-
   <!-- end book section -->
+
+    <!-- footer section -->
+    <footer class="container-fluid footer_section">
+      <p>
+        To register a person:<br> <br>. 1. You don't need to have an account but you will have a WB Number assocated with your ID and Phone number.<br><br>
+        2. Listing a person is not completely free. We charge R147 for a BLACk and WHITE LISTING .<br><br>
+        3. You are required to upload proof of the claims in your Compaints. Prof can be a document, voice note, video, picture etc.<br><br>
+        4. You can list a person that you are happy about. e.g. Getting good service from a waiter.
+      </p>
+    </footer>
+    <!-- footer section -->
 
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
