--- a/index.html
+++ b/index.html
@@ -291,9 +291,10 @@
     <footer class="container-fluid footer_section">
       <p>
         To register a person:<br> <br>. 1. You don't need to have an account but you will have a WB Number assocated with your ID and Phone number.<br><br>
-        2. Listing a person is not completely free. We charge R147 for a BLACk and WHITE LISTING .<br><br>
-        3. You are required to upload proof of the claims in your Compaints. Prof can be a document, voice note, video, picture etc.<br><br>
-        4. You can list a person that you are happy about. e.g. Getting good service from a waiter.
+        2. Listing a person is not completely free. We charge R147 for a BLACK LIST and WHITE LISTING is free.<br><br>
+        3. You are required to upload proof of the claims in your Compaints. proof can be a document, voice note, video, screen shot etc.<br><br>
+        4. You can list a person that you are happy about. e.g. Getting good service from a waiter.<br><br>
+        5.if you are black listed you can remove your BLACK LISTING by paying what you owe the person that listed you plus a R1000 admin fee.
       </p>
     </footer>
     <!-- footer section -->
