--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     
 
                     if (searchResults.length === 0) {
-                      todoListContainer.innerHTML = '<li>No matching persons or entities found.</li> <div class="btn-container"><button id="deepSearchButton">Deep Search</button></div>';
+                      todoListContainer.innerHTML = '<li>No matching persons or entities found.</li> <div class="btn-container"><button id="deepSearchButton">Refine Search</button></div>';
                       document.getElementById("deepSearchButton").addEventListener("click", function() {
     window.location.href = 'deep-search.html';
 });
@@ -438,3 +438,12 @@
 
 <!-- Search model end -->
 </html>
+
+
+
+
+
+
+
+
+
