--- a/deep-search.html
+++ b/deep-search.html
@@ -210,7 +210,7 @@
           <div class="col-lg-8">
             <div class="form-row">
              </div>
-            Use this search box to very the details of the person you are reporting.
+            Use this search box to verify the details of the person you are reporting or commending.
           </div>
           <div class="iframe-container">
             <iframe src="https://www.bing.com/search?q=Who+Are+You+Reporting+or+Commending?+type+here...+&qs=n&form=QBRE&sp=-1&ghc=1&lq=0&pq=rich+mnisi+&sc=11-11&sk=&cvid=2DCC3C6ACDA34756B2DF89147E8FBBD7&ghsh=0&ghacc=0&ghpl="width="100%" height="600px" frameborder="0"></iframe>
