--- a/deep-search.html
+++ b/deep-search.html
@@ -202,6 +202,77 @@
   </section>
   <!-- end slider section -->
   </div>
+  <div class="flo_container">
+    <h6 style="padding: 10px 20px;">
+    Ready to reaport or list a person/company?</h6>
+    
+      <button id="openModalBtn" type="submit" class="start_btn">Start</button>
+    
+      </div>
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h5>Report/Reward a person</h5>
+          <p>Fill in the form below about the person or company you want to LIST with us</p>
+        </div>
+      </div>
+  </div>
+  <style>
+    /* Modal styles */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 600px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+  </style>
+  <script>
+    // Get the button and modal
+var openModalBtn = document.getElementById("openModalBtn");
+var modal = document.getElementById("myModal");
+
+// When the button is clicked, display the modal
+openModalBtn.addEventListener("click", function() {
+  modal.style.display = "block";
+});
+
+// When the user clicks on the close button or anywhere outside the modal, close it
+modal.addEventListener("click", function(event) {
+  if (event.target === modal || event.target.classList.contains("close")) {
+    modal.style.display = "none";
+  }
+});
+
+  </script>
   <!-- book section -->
   <section class="book_section">
     <div class="form_container">
