--- a/deep-search.html
+++ b/deep-search.html
@@ -214,6 +214,7 @@
           <span class="close">&times;</span>
           <h5>Report/Reward a person</h5>
           <p>Fill in the form below about the person or company you want to LIST with us</p>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfTo7hfh2ogvgIgUVBi963pWuabVlpjHLmxjhWp_Dyt4rLItg/viewform?embedded=true" width="98%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
       </div>
   </div>
@@ -228,16 +229,18 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.698);
 }
 
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
+  margin: 2% 2%;
+  padding: 6px;
   border: 1px solid #888;
-  width: 80%;
+  width: 95%;
+  height: 100%;
   max-width: 600px;
+  overflow-x: hidden;
 }
 
 .close {
