--- a/deep-search.html
+++ b/deep-search.html
@@ -223,7 +223,7 @@
 .modal {
   display: none;
   position: fixed;
-  z-index: 1000;
+  z-index: 1000 !important;
   left: 0;
   top: 0;
   width: 100%;
