--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <div id="myNav" class="overlay">
               <div class="overlay-content">
                 <a href="index.html">HOME</a>
-                <a href="#">LIST A PERSON</a>
-                <a href="#">LIST A COMPANY</a>
+                <a href="deep-search.html">LIST A PERSON</a>
+                <a href="deep-search.html">LIST A COMPANY</a>
                 <a href="#">BLACK LISTED</a>
                 <a href="#">WHITE LISTED</a>
                 <a href="#">GRAY LISTED</a>
@@ -220,7 +220,7 @@
                   const todoList = [
                     { parent: 'Siyabonga Ndaba', children: 'Marketing Exc', child4:'W0338311',COMENDATIONS: '111', COMPLAINTS:'4' ,status:'WHITE', avatarURL: 'https://scontent.fjnb1-1.fna.fbcdn.net/v/t39.30808-6/345442685_3590542494508804_811087326214541940_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeH_l7STBCUoHe4FzpBoeQsQF5PqALyd6dIXk-oAvJ3p0o4WlAubDdE5KPebVVoTOxjwBBqUxHwJDq5Bu9tpTeAk&_nc_ohc=iPKN6hepejQAb75DaY0&_nc_zt=23&_nc_ht=scontent.fjnb1-1.fna&oh=00_AfAvIbagg9mAKYR73weuos1rNW2QIfcFPVyP4rXrhqfX2w&oe=661C6F73' },
                     { parent: 'Boniswa Mngomezulu', children: 'Fashion Designer', child4:'W0333411',COMENDATIONS: '221', COMPLAINTS:'0' ,status:'WHITE',avatarURL: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUyQuiQw9U1nmRAMctkwAWN5Cf_jAntu_8fk06h-FmmA&s' },
-                    { parent: 'Make a logo', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
+                    { parent: 'Refilwe Lotus mae', children: 'DJ', child4:'W0388411',COMENDATIONS: '0', COMPLAINTS:'1' ,status:'BLACK',avatarURL: '' },
                     { parent: 'Chat online', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
                     { parent: 'Meet mom', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' }
                   ];
@@ -301,8 +301,8 @@
     const profilecardBottom = document.createElement('div'); // Changed variable name
     profilecardBottom.classList.add('profile-card-bottom');
     profilecardBottom.innerHTML = `
-        <a href="#" class="follow">COMPLAIN</a>
-        <a href="#" class="hire-me">COMMEND</a>
+        <a href="deep-search.htnl" class="follow">COMPLAIN</a>
+        <a href="deep-search.htnl" class="hire-me">COMMEND</a>
     `;
 
     todoItem.appendChild(backdrop);
