--- a/deep-search.html
+++ b/deep-search.html
@@ -77,8 +77,8 @@
             <div id="myNav" class="overlay">
               <div class="overlay-content">
                 <a href="index.html">HOME</a>
-                <a href="#">LIST A PERSON</a>
-                <a href="#">LIST A COMPANY</a>
+                <a href="deep-search.html">LIST A PERSON</a>
+                <a href="deep-search.html">LIST A COMPANY</a>
                 <a href="#">BLACK LISTED</a>
                 <a href="#">WHITE LISTED</a>
                 <a href="#">GRAY LISTED</a>
