--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                   const todoList = [
                     { parent: 'Siyabonga Ndaba', children: 'Marketing Exc', child4:'W0338311',COMENDATIONS: '111', COMPLAINTS:'4' ,status:'WHITE', avatarURL: 'https://scontent.fjnb1-1.fna.fbcdn.net/v/t39.30808-6/345442685_3590542494508804_811087326214541940_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeH_l7STBCUoHe4FzpBoeQsQF5PqALyd6dIXk-oAvJ3p0o4WlAubDdE5KPebVVoTOxjwBBqUxHwJDq5Bu9tpTeAk&_nc_ohc=iPKN6hepejQAb75DaY0&_nc_zt=23&_nc_ht=scontent.fjnb1-1.fna&oh=00_AfAvIbagg9mAKYR73weuos1rNW2QIfcFPVyP4rXrhqfX2w&oe=661C6F73' },
                     { parent: 'Boniswa Mngomezulu', children: 'Fashion Designer', child4:'W0333411',COMENDATIONS: '221', COMPLAINTS:'0' ,status:'WHITE',avatarURL: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUyQuiQw9U1nmRAMctkwAWN5Cf_jAntu_8fk06h-FmmA&s' },
-                    { parent: 'Refilwe Lotus mae', children: 'DJ', child4:'W0388411',COMENDATIONS: '0', COMPLAINTS:'1' ,status:'BLACK',avatarURL: '' },
+                    { parent: 'Refilwe Lotus mae', children: 'DJ', child4:'W0388411',COMENDATIONS: '0', COMPLAINTS:'1' ,status:'BLACK',avatarURL: 'https://cdn.24.co.za/files/Cms/General/d/2604/7fe845f73e8a4b59a66ad50d10d1b824.jpg' },
                     { parent: 'Chat online', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' },
                     { parent: 'Meet mom', children: ['today', 'never'],avatarURL: 'https://siyapercy.online/Siyabonga%20Ndaba.jpg' }
                   ];
